fix: player z-index stacking issue and bump version to 2.7.4

--- a/src/blocks/audioplayer/styles.scss
+++ b/src/blocks/audioplayer/styles.scss
@@ -73,7 +73,7 @@
 
 .wp-block-h5ap-audioplayer {
     position: relative;
-    z-index: 999999 !important;
+    z-index: 10 !important;
 
     input[type="range"]::-webkit-slider-runnable-track {
         height: 4px;
